[package]
name = "map-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features= ["framework", "standard_framework", "rustls_backend"] }
tokio = { version="1", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15"
google_maps = "3"
log = "0.4"
env_logger = "0.10"
postgrest = "1"
serde_json = "1"